--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 </li>
                 <li>
                     <div class="timeline-content">
-                        <h4><strong>Process Improvement Officer<strong></h4>
+                        <h4><strong>Process Improvement Officer</strong></h4>
                         <span>2016 - 2021 | Humpty Doo Barramundi</span>
                         <p>&#x2022; Led digital transformation initiatives and system integration projects.</p>
                         <p>&#x2022; Migrated the entire business from local and various cloud storage to Microsoft 365 and SharePoint.</p>
@@ -661,4 +661,3 @@
     </script>
 </body>
 </html>
-
